Add Ben Miller to list of coaches

--- a/team/index.html
+++ b/team/index.html
@@ -74,6 +74,9 @@ layout: main
                 Asa Pierce
             </p>
             <p class="column">
+                Ben Miller
+            </p>
+            <p class="column">
                 Cassie Zimmer
             </p>
             <p class="column">
