--- a/team/index.html
+++ b/team/index.html
@@ -14,8 +14,8 @@ layout: main
           creators, makers, tinkerers, designers, inventors, (whatever you
           prefer to call yourself), takes a lot of work.
           Interested in helping out? <a
-          href="https://docs.google.com/forms/d/1k2h8GUhAPetOmOHl19RDwa6ZBaaXHhA3LUfiEEQbOyo/viewform?c=0&w=1">Sign
-          up here!</a>
+          href="makerspace@mtu.edu">Contact
+          us here!</a>
         </p>
 
         <h3 class="header">
