Link signup form

--- a/team/index.html
+++ b/team/index.html
@@ -14,8 +14,8 @@ layout: main
           creators, makers, tinkerers, designers, inventors, (whatever you
           prefer to call yourself), takes a lot of work.
           Interested in helping out? <a
-          href="makerspace@mtu.edu">Contact
-          us here!</a>
+          href="https://docs.google.com/forms/d/e/1FAIpQLSfIzT2M5DMW1mxSPlJLA1TPpDpi0obBB7mrAmJER3KqwpNfPQ/viewform?usp=sf_link">Sign
+          up here!</a>
         </p>
 
         <h3 class="header">
