--- a/team/index.html
+++ b/team/index.html
@@ -37,7 +37,7 @@ layout: main
               </p>
             </div>
           {% endfor %}
-          
+
           </div>
         </div>
 
@@ -63,7 +63,7 @@ layout: main
           Maker Coaches
         </h3>
 
-        <div class="row small-up-1 medium-up-2 large-up-3">
+        <!-- <div class="row small-up-1 medium-up-2 large-up-3">
             <p class="column">
                 Adam Scholl
             </p>
@@ -124,7 +124,7 @@ layout: main
             <p class="column">
                 Zeb Jones
             </p>
-        </div>
+        </div> -->
 
 
         </p>
