--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: main
       </div>
       <div class="list-item__text">
         <p>
-          located in the MUB Basement
+          Located in the MUB Basement
         </p>
       </div>
     </div>
@@ -36,9 +36,40 @@ layout: main
         <i class="fa fa-clock-o"></i>
       </div>
       <div class="list-item__text">
-        <p>
-          open Monday - Thursday, 3:00 - 9:00 pm
-        </p>
+		<table class="list-item__table">
+			<tr>
+				<th></th>
+				<th></th>
+			</tr>
+			<tr>
+				<td>Monday:&nbsp </td>
+				<td>2:00 - 8:00 pm</td>
+			</tr>
+			<tr>
+				<td>Tuesday:&nbsp </td>
+				<td>4:00 - 6:00 pm</td>
+			</tr>
+			<tr>
+				<td>Wensday:&nbsp </td>
+				<td>2:00 - 4:00 pm, 6:00 - 8:00 pm</td>
+			</tr>
+			<tr>
+				<td>Thursday:&nbsp </td>
+				<td>4:00 - 6:00 pm</td>
+			</tr>
+			<tr>
+				<td>Friday:&nbsp </td>
+				<td>2:00 - 4:00 pm</td>
+			</tr>
+			<tr>
+				<td>Saturday:&nbsp </td>
+				<td>2:00 - 4:00 pm</td>
+			</tr>
+			<tr>
+				<td>Sunday:&nbsp </td>
+				<td>CLOSED</td>
+			</tr>
+		</table>
       </div>
     </div>
 
@@ -48,7 +79,7 @@ layout: main
       </div>
       <div class="list-item__text">
         <p>
-          no cost for Michigan Tech students, faculty, and staff
+          No cost for Michigan Tech students, faculty, and staff
         </p>
       </div>
     </div>
@@ -59,7 +90,7 @@ layout: main
       </div>
       <div class="list-item__text">
         <p>
-          tools and equipment available to use for 3D printing, woodworking,
+          Tools and equipment available to use for 3D printing, woodworking,
           electronics, crafting, sewing, and more!
         </p>
       </div>
