Updates The team page with all new coaches and the current leadership team.

--- a/team/index.html
+++ b/team/index.html
@@ -40,6 +40,74 @@ layout: main
 
           </div>
         </div>
+		
+		 <h3 class="header">
+          Maker Coaches
+        </h3>
+		<p class="margin-bottom">
+          Stop by the Alley to meet our team of amazing coaches that are
+          here to assist you and share their experience!
+        </p>
+		<div class="row small-up-1 medium-up-2 large-up-3">
+            <p class="column">
+			Alissa Richardson
+            </p>
+            <p class="column">
+			Ben Bolduc
+            </p>
+            <p class="column">
+			Brendan Powers
+            </p>
+            <p class="column">
+			Chase Johnstone
+            </p>
+            <p class="column">
+			Chris Norton
+            </p>
+            <p class="column">
+			Connor Langdon
+            </p>
+            <p class="column">
+			David Hoffman
+            </p>
+            <p class="column">
+			Gi West
+            </p>
+            <p class="column">
+			Ginna Ennis
+            </p>
+            <p class="column">
+			Griffin Harvey
+            </p>
+            <p class="column">
+			Jack Philip
+            </p>
+            <p class="column">
+			Ben Porkorny
+            </p>
+            <p class="column">
+			Matthew Yeates
+            </p>
+            <p class="column">
+			Meg Rotole
+            </p>
+            <p class="column">
+			Nate Yenor
+            </p>
+            <p class="column">
+			Ronald Kyllonen
+            </p>
+            <p class="column">
+			Sam Vellequette
+            </p>
+            <p class="column">
+			Travis Wavrunek
+            </p>
+            <p class="column">
+			Wes Grove
+            </p>
+        </div> 
+		
 
         <h3 class="header">
           Advisors
@@ -59,78 +127,9 @@ layout: main
           {% endfor %}
         </div>
 
-        <h3 class="header">
-          Maker Coaches
-        </h3>
-
-        <!-- <div class="row small-up-1 medium-up-2 large-up-3">
-            <p class="column">
-                Adam Scholl
-            </p>
-            <p class="column">
-                Alex Kuhn
-            </p>
-            <p class="column">
-                Asa Pierce
-            </p>
-            <p class="column">
-                Ben Miller
-            </p>
-            <p class="column">
-                Cassie Zimmer
-            </p>
-            <p class="column">
-                Chelsey Rock
-            </p>
-            <p class="column">
-                Cody Tuftee
-            </p>
-            <p class="column">
-                Forest Collins
-            </p>
-            <p class="column">
-                Fred Poddig
-            </p>
-            <p class="column">
-                Jaden Coe
-            </p>
-            <p class="column">
-                Jaideep Singh
-            </p>
-            <p class="column">
-                Kyra Pratley
-            </p>
-            <p class="column">
-                Landon Van Acker
-            </p>
-            <p class="column">
-                Martin Mueller
-            </p>
-            <p class="column">
-                Noah Skrzypczak
-            </p>
-            <p class="column">
-                Ron Kyllonen
-            </p>
-            <p class="column">
-                Sam Bulthuis
-            </p>
-            <p class="column">
-                Sam Dlugoss
-            </p>
-            <p class="column">
-                Theo Wachowski
-            </p>
-            <p class="column">
-                Zeb Jones
-            </p>
-        </div> -->
+         
 
 
-        </p>
-        <p class="margin-bottom">
-          Stop by the Alley to meet our team of amazing coaches that are
-          here to assist you and share their experience!
         </p>
       </div>
     </div>
