Updates our hours to include the most recent level-5 order

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@ layout: main
       <div class="list-item__icon">
         <i class="fa fa-clock-o"></i>
       </div>
-      <div class="list-item__text">
+		<p>
+          CLOSED
+        </p>
+      <!--<div class="list-item__text">
 		<table class="list-item__table">
 			<tr>
 				<th></th>
@@ -70,7 +73,7 @@ layout: main
 				<td>CLOSED</td>
 			</tr>
 		</table>
-      </div>
+      </div>-->
     </div>
 
     <div class="list-item">
