Fixes a small inconsistency in css styling

--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@ layout: main
       <div class="list-item__icon">
         <i class="fa fa-clock-o"></i>
       </div>
+		
+      <div class="list-item__text">
 		<p>
           CLOSED
         </p>
-      <!--<div class="list-item__text">
-		<table class="list-item__table">
+		<!--<table class="list-item__table">
 			<tr>
 				<th></th>
 				<th></th>
@@ -72,8 +73,8 @@ layout: main
 				<td>Sunday:&nbsp </td>
 				<td>CLOSED</td>
 			</tr>
-		</table>
-      </div>-->
+		</table>-->
+      </div>
     </div>
 
     <div class="list-item">
