--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@ layout: main
       </div>
 		
       <div class="list-item__text">
-		<p>
+		<!--<p>
           CLOSED
-        </p>
-		<!--<table class="list-item__table">
+        </p>-->
+		<table class="list-item__table">
 			<tr>
 				<th></th>
-				<th></th>
+				<th></th> 
 			</tr>
 			<tr>
 				<td>Monday:&nbsp </td>
-				<td>2:00 - 8:00 pm</td>
+				<td>2:00 - 4:00 pm & 6:00 - 8:00 pm</td>
 			</tr>
 			<tr>
 				<td>Tuesday:&nbsp </td>
@@ -55,25 +55,25 @@ layout: main
 			</tr>
 			<tr>
 				<td>Wensday:&nbsp </td>
-				<td>2:00 - 4:00 pm, 6:00 - 8:00 pm</td>
+				<td>CLOSED</td>
 			</tr>
 			<tr>
 				<td>Thursday:&nbsp </td>
-				<td>4:00 - 8:00 pm</td>
+				<td>2:00 - 8:00 pm</td>
 			</tr>
 			<tr>
 				<td>Friday:&nbsp </td>
-				<td>2:00 - 4:00 pm</td>
+				<td>4:00 - 6:00 pm</td>
 			</tr>
 			<tr>
 				<td>Saturday:&nbsp </td>
-				<td>2:00 - 4:00 pm</td>
+				<td>CLOSED</td>
 			</tr>
 			<tr>
 				<td>Sunday:&nbsp </td>
 				<td>CLOSED</td>
 			</tr>
-		</table>-->
+		</table>
       </div>
     </div>
 
