Fixes spelling errors on the homepage

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: main
 				<td>4:00 - 8:00 pm</td>
 			</tr>
 			<tr>
-				<td>Wensday:&nbsp </td>
+				<td>Wednesday:&nbsp </td>
 				<td>CLOSED</td>
 			</tr>
 			<tr>
