Changes the team page to include new coaches and modify some bios

--- a/team/index.html
+++ b/team/index.html
@@ -52,24 +52,18 @@ layout: main
             <p class="column">
 			Alissa Richardson
             </p>
-            <p class="column">
-			Ben Bolduc
-            </p>
-            <p class="column">
-			Brendan Powers
-            </p>
-            <p class="column">
-			Chase Johnstone
-            </p>
-            <p class="column">
-			Chris Norton
-            </p>
+			<p class="column">
+			Brendan Powerss
+			</p>
             <p class="column">
 			Connor Langdon
             </p>
             <p class="column">
 			David Hoffman
             </p>
+			<p class="column">
+			Dolan Moles
+			</p>
             <p class="column">
 			Gi West
             </p>
@@ -82,29 +76,23 @@ layout: main
             <p class="column">
 			Jack Philip
             </p>
-            <p class="column">
-			Ben Porkorny
-            </p>
+			<p class="column">
+			Joe Muhle
+			</p>
             <p class="column">
 			Matthew Yeates
             </p>
             <p class="column">
 			Meg Rotole
             </p>
-            <p class="column">
-			Nate Yenor
-            </p>
+			<p class="column">
+			Riley Nelson
+			</p>
             <p class="column">
 			Ronald Kyllonen
             </p>
             <p class="column">
 			Sam Vellequette
-            </p>
-            <p class="column">
-			Travis Wavrunek
-            </p>
-            <p class="column">
-			Wes Grove
             </p>
         </div> 
 		
