Modifies the wiki to include relevant videos using the youtube data API

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -3,9 +3,57 @@ layout: main
 ---
 
 <script type="text/javascript" src="..\js\Wiki_Library.js"></script>
+<script src="https://apis.google.com/js/client.js?onload=load"></script>
+<script type="text/javascript" src="https://apis.google.com/js/client.js?onload=init"></script>
+
+<div class="row" >
+	<h3 class="header">
+		Makerspace Wiki
+	</h3>
+	<div class="wiki">	
+		<h4 onclick="wikiDropDownWoodWorking()" class="wiki__archivebtn">
+			WoodWorking <i id="WoodWorkingArrowDropDown" class="blueArrow right"></i>
+		</h4>
+		
+		<div id="WoodWorkingDropDown" class="wikiContent">
+			<div id="WWDisplay" class="row small-up-1 medium-up-2 large-up-3">
+			</div> 
+		</div>
+		
+		<h4 onclick="wikiDropDownCrafting()" class="wiki__archivebtn">
+			Crafting <i id="CraftingArrowDropDown" class="blueArrow right"></i>
+		</h4>
+		
+		<div id="CraftingDropDown" class="wikiContent">
+			<div id="CraftingDisplay" class="row small-up-1 medium-up-2 large-up-3">
+			</div> 
+		</div>
+		
+		<h4 onclick="wikiDropDownPrinting()" class="wiki__archivebtn">
+			3D Printing <i id="PrintingArrowDropDown" class="blueArrow right"></i>
+		</h4>
+		
+		<div id="PrintingDropDown" class="wikiContent">
+			<div id="PrintingDisplay" class="row small-up-1 medium-up-2 large-up-3">
+			</div> 
+		</div>
+		
+		<h4 onclick="wikiDropDownElectronics()" class="wiki__archivebtn">
+			Electronics <i id="ElectronicsArrowDropDown" class="blueArrow right"></i>
+		</h4>
+		
+		<div id="ElectronicsDropDown" class="wikiContent">
+			<div id="ElectronicsDisplay" class="row small-up-1 medium-up-2 large-up-3">
+			</div> 
+		</div>
+		
+	</div>
+</div>
+
+
 <div class="row">
 <h3 onclick="wikiDropDown()" class="header wiki__archivebtn ">
-        Archived Makerspace Wiki <i id="archiveArrowDropDown" class="arrow right"></i>
+        Archived Makerspace Wiki <i id="archiveArrowDropDown" class="archiveArrow archiveRight"></i>
 </h3>
 </div>
 
