Adds The new team leads to the team page

--- a/team/index.html
+++ b/team/index.html
@@ -40,7 +40,7 @@ layout: main
 
           </div>
         </div>
-		
+
 		 <h3 class="header">
           Maker Coaches
         </h3>
@@ -49,53 +49,56 @@ layout: main
           here to assist you and share their experience!
         </p>
 		<div class="row small-up-1 medium-up-2 large-up-3">
-            <p class="column">
+      <p class="column">
 			Alissa Richardson
-            </p>
+      </p>
 			<p class="column">
 			Brendan Powerss
 			</p>
-            <p class="column">
+      <p class="column">
 			Connor Langdon
-            </p>
-            <p class="column">
+      </p>
+      <p class="column">
 			David Hoffman
-            </p>
+      </p>
 			<p class="column">
 			Dolan Moles
 			</p>
-            <p class="column">
+      <p class="column">
 			Gi West
-            </p>
-            <p class="column">
+      </p>
+      <p class="column">
 			Ginna Ennis
-            </p>
-            <p class="column">
+      </p>
+      <p class="column">
+      Greta Rickauer
+      </p>
+      <p class="column">
 			Griffin Harvey
-            </p>
-            <p class="column">
+      </p>
+      <p class="column">
 			Jack Philip
-            </p>
+      </p>
 			<p class="column">
 			Joe Muhle
 			</p>
-            <p class="column">
+      <p class="column">
 			Matthew Yeates
-            </p>
-            <p class="column">
+      </p>
+      <p class="column">
 			Meg Rotole
-            </p>
+      </p>
 			<p class="column">
 			Riley Nelson
 			</p>
-            <p class="column">
+      <p class="column">
 			Ronald Kyllonen
-            </p>
-            <p class="column">
+      </p>
+      <p class="column">
 			Sam Vellequette
-            </p>
-        </div> 
-		
+      </p>
+        </div>
+
 
         <h3 class="header">
           Advisors
@@ -115,7 +118,7 @@ layout: main
           {% endfor %}
         </div>
 
-         
+
 
 
         </p>
