Adds a new team member and updates the hours

--- a/team/index.html
+++ b/team/index.html
@@ -83,6 +83,9 @@ layout: main
 			Joe Muhle
 			</p>
       <p class="column">
+			John Mazur
+			</p>
+      <p class="column">
 			Matthew Yeates
       </p>
       <p class="column">
