Updates the winter carnaval hours

--- a/index.html
+++ b/index.html
@@ -55,15 +55,18 @@ layout: main
 			</tr>
 			<tr>
 				<td>Wednesday:&nbsp</td>
-				<td>2:00 - 6:00 pm</td>
+				<!--<td>2:00 - 6:00 pm</td>-->
+        <td>CLOSED</td>
 			</tr>
 			<tr>
 				<td>Thursday:&nbsp </td>
-				<td>2:00 - 8:00 pm</td>
+				<!--<td>2:00 - 8:00 pm</td>-->
+        <td>CLOSED</td>
 			</tr>
 			<tr>
 				<td>Friday:&nbsp </td>
-				<td>4:00 - 6:00 pm</td>
+				<!--<td>4:00 - 6:00 pm</td>-->
+        <td>CLOSED</td>
 			</tr>
 			<tr>
 				<td>Saturday:&nbsp </td>
