Update the events page

--- a/events/index.html
+++ b/events/index.html
@@ -1,57 +1,12 @@
 ---
 layout: main
 ---
-
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0"></script>
-<div class="content">
-
-  <div class="row">
-
-    <div class="small-12 columns ">
-
-      <h3 class="header">
-        Check Out The Alley Facebook Page for Upcoming Events!
-      </h3>
-      <div class="fb-page"
-        data-href="https://www.facebook.com/makerspacemtu/"
-        data-tabs="events,timeline"
-        data-width=""
-        data-height="500"
-        data-small-header="false"
-        data-adapt-container-width="true"
-        data-hide-cover="false"
-        data-show-facepile="true"><blockquote cite="https://www.facebook.com/makerspacemtu/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/makerspacemtu/">The Alley - Makerspace at Michigan Tech</a></blockquote></div>
-      <!-- {% assign sorted_events = site.events | sort: "start_date" | reverse %}
-
-      {% for event in sorted_events %}
-        {% capture should_add_row %}{{ forloop.index | modulo: 3 }}{% endcapture %}
-
-        {% if should_add_row == "1" %}
-          <div class="row events__row">
-        {% endif %}
-
-          <div class="small-12 medium-4 columns">
-            <a href="{{ event.url }}" class="event-card">
-              <div class="event-card__background" style="background-image: url('{{ event.background_url }}');"></div>
-              <div class="header small">
-                {{ event.title }}
-              </div>
-              <div class="event-card__time">
-                <i class="fa fa-clock-o"></i> {{ event.start_date | date: "%l:%M %p"  }} - {{ event.end_date | date: "%l:%M %p, %b %-d, %Y" }}
-              </div>
-              <p class="event-card__description small">
-                {{ event.excerpt | strip_html | truncatewords:50 }}
-                </a>
-              </p>
-            </a>
-          </div> -->
-
-        <!-- {% if should_add_row == "0" %}
-          </div> -->
-        <!-- {% endif %}
-
-      {%endfor%} -->
-    <!-- </div> -->
-  </div>
-</div>
+<!--<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0"></script>-->
+<section>
+  <div class="content">
+    <div class="row">
+        <image src="/img/events/MakeMugKnight.jpg" width="500" height="600">
+      </div>
+    </div>
+</section>
