--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ layout: main
 				<td>CLOSED</td>
 			</tr>
 		</table>
+    {% raw %}<?php echo("parsed"); ?>{% endraw %}
       </div>
     </div>
-
     <div class="list-item">
       <div class="list-item__icon">
         <i class="fa fa-money"></i>
