Updates the hours and coaches

--- a/team/index.html
+++ b/team/index.html
@@ -79,8 +79,8 @@ layout: main
       <p class="column">
 			Jack Philip
       </p>
-			<p class="column">
-			Joe Muhle
+      <p class="column">
+			Jacob Terlecki
 			</p>
       <p class="column">
 			John Mazur
