Updates our hours

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ layout: main
 			</tr>
 			<tr>
 				<td>Friday:&nbsp </td>
-				<td>4:00 - 6:00 pm</td>
+				<td>CLOSED</td>
 			</tr>
 			<tr>
 				<td>Saturday:&nbsp </td>
