--- a/team/index.html
+++ b/team/index.html
@@ -25,8 +25,8 @@ layout: main
         <div class="row small-up-1 medium-up-2 large-up-3">
           {% for member in site.alley_crew %}
             <div class="column member">
-              <div class="member__photo" style="background-image: url('/img/crew/{{ member.photo }}');"></div>
-              <a href="mailto:{{ member.email }}?subject=Makerspace Involvement" target="_blank" class="member__name">
+              <div class="member__photo"  style="background-image: url('/img/crew/{{ member.photo }}');"></div>
+              <a href="{{ member.quoteLink }}" target="_blank" class="member__name">
                 {{ member.name }}
               </a>
               <h4 class="member__title">
